# MontyCarlo

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  404.html  Asources.py  CNAME  Dockerfile  LICENSE  MANIFEST.in  README.md  README2.md  __init__.py  __test.cp37-win_amd64.pyd  __test.cp37-win_amd64.pydasd  __test.pyx  _init.c  _init.cp38-win_amd64.pyd  _init.html  _testCS.cp38-win_amd64.pyd  _testCS.html  _testCS.py  cprof  cprof.txt  docker-compose.override.yml  docker-compose.yaml  docker-compose.yml  docusaurus.config.js  ecmp2020.pptx  in.txt  index.html  install.py  jupyterStyle.css  makeElastic.txt  new_setup.py  package.json  pyproject.toml  requirements.txt  settings.py  setup.cfg  (+20 more)
BEFORE_STATE/: sources.pyx
EADL/: 1.txt  29.txt  32.txt  44.txt  52.txt  6.txt  74.txt  85.txt  93.txt  94.txt
EEDL/: 34.txt  47.txt  50.txt  62.txt  81.txt  98.txt  download_database.py
EPDL/: 100.txt  12.txt  17.txt  23.txt  33.txt  38.txt  45.txt  48.txt  49.txt  52.txt  60.txt  64.txt  70.txt  81.txt  89.txt
MontyCarlo/: README.md  __init__.py  _init.c  _init.html  _init.pxd  _init.pyx  install.py  plotter.py  settings.py  setup.py  sources.cpp  sources.html  sources.pyx  types.c  types.html  types.pxd  types.pyx
__materialsOLD__/: K.npy  _materials.py  materials.lab.ipynb  materials.py  materials_FUTURE.py  photon.theory.compton.ipynb
__pycache__/: 0.250300738456415  asd  asd0.452345510887882  tmp1ftgelw2  tmp3294cr_0  tmp5nfw8ahk  tmp5nfw_m0j  tmp5xq96_56  tmp6xkfol7_  tmp769qvjmh  tmp7jhiu814  tmp7nrxo03y  tmp85ogl_i_  tmp8eukzyaw  tmp911390c7  tmp98hg91i9  tmp_bhex2ax  tmp_gvko5xb  tmpavm0bqfc  tmpbum1f92l  tmpc8d7c126  tmpcxlv88ik  tmpdomgbmwc  tmpe1j1myf9  tmpeq_09rvi  tmpga31zchg  tmph604_rim  tmphgp6fkzr  tmphrq35gge  tmpidc6dqgx  tmpiubtw3xg  tmpj6qoi6ts  tmpjr5_59ct  tmpjv9cl57b  tmpk8r3b5ug  tmpkkozkyyc  tmplb5l5bd9  tmplfrmkvp7  tmpnvm1pr5k  tmpnxex7kdu  (+14 more)
_random/: interface.c  interface.cp38-win_amd64.pyd  interface.cpp  interface.pxd  interface.pyx  random.c  random.cp38-win_amd64.pyd  random.cpp  random.html  random.pxd  random.pyx
cl/: myco.py  transcompiler.py
db/: README.md  calc.py
demos/: README.md
dev/: README.md  docusaurus.config.js  package.json  readme.md
doc/: index.html
docs/: .buildinfo  404.html  README.md  blog.html  genindex.html  index.html  intro.md  markdown-page.html  objects.inv  search.html  searchindex.js  sitemap.xml
docussaurus/: docusaurus.config.js  versions.json
geometry/: CSG - Cópiaº.pyx~  CSG.cp38-win_amd64.pyd  CSG.cpp  CSG.cppç  CSG.html  CSG.pyx  IntervalArithmetics.cpp  main.cp38-win_amd64.pyd  main.cpp  main.html  main.pxd  main_deprec.lua  primitives.cp37-win_amd64.pyd  primitives.pxd  primitives.pyx
gui/: README.md  package-lock.json  package.json
markdown-page/: index.html
materials/: .materials.py.swp  __init__.py  _pyRelax.html  _pyRelax.py_  cppRelax.cpp  cppRelax.h  cppRelaxAPI.pxd  electron.py  logger.py  materials.c  materials.cp38-win_amd64.pyd  materials.cpp  materials.html  materials.pxd  materials.py  materials.pyx  pyRelax.cp38-win_amd64.pyd  pyRelax.cpp  pyRelax.html  pyRelax.pxd  pyRelax.pyx  setup.py
particles/: electrons.cp38-win_amd64.pyd  (+26 more)
server/: .gitignore  README.md  pyproject.toml  requirements.txt
server/config/: settings.py  urls.py
server/engine/: __init__.py
server/geometry/: apps.py
server/materials/: admin.py  apps.py  models.py  serializers.py  views.py
server/pages/: urls.py  views.py
server/pages/templates/: index.html  package-lock.json
server/pages/templates/src/: index.js  package.json  styles.css
server/projects/: models.py  serializers.py  views.py
(+3011 files in other folders)
