[metadata]
# replace with your username:
name = MontyCarlo
version = 0.0.35
author = Rui Filipe de Sousa Campos
author_email = ruifilipedesousacampos@gmail.com
description = A fast general purpose monte carlo particle simulator (photons, electrons and positrons). Written in Cython, Python and C++.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RuiFilipeCampos/MontyCarlo
project_urls =
    Bug Tracker = https://github.com/RuiFilipeCampos/MontyCarlo/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Windows 64bit

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = MontyCarlo
