[metadata]
# replace with your username:
name = MontyCarlo
version = 0.1a.dev2
author = Rui Filipe de Sousa Campos
author_email = ruifilipedesousacampos@gmail.com
description = The django of particle simulators.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RuiFilipeCampos/MontyCarlo
project_urls =
    Bug Tracker = https://github.com/RuiFilipeCampos/MontyCarlo/issues
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Cython
    Programming Language :: C++
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization
license = {file = "LICENSE"}

[project.urls]
repository = "https://github.com/RuiFilipeCampos/MontyCarlo"
changelog = "https://github.com/RuiFilipeCampos/MontyCarlo/releases"

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = MontyCarlo